# docsense

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  documents.py  query.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  document.py  user.py
backend/app/services/generation/: generator.py
backend/app/services/ingestion/: chunker.py  embedder.py  extractor.py  pipeline.py
backend/app/services/retrieval/: retriever.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 45fa8428330a_initial_schema.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py
frontend/: middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx  QuerySettingsPanel.tsx  SourceChunk.tsx  TokenCounter.tsx
frontend/components/documents/: DocumentCard.tsx  DocumentList.tsx  DocumentUpload.tsx  StatusBadge.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/providers/: AuthProvider.tsx
frontend/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  slider.tsx  (+4 more)
frontend/hooks/: use-toast.ts
frontend/lib/: utils.ts
(+13 files in other folders)
